<resources>
    <string name="app_name">シェア散歩</string>
    <string name="dpt_hint">出発地</string>
    <string name="arv_hint">目的地</string>
    <string name="bt_search">検索</string>
    <string name="tv_deg">気温　:　</string>
    <string name="tv_height_dif">高低差　:　</string>
    <string name="tv_distance">距離　:　</string>
    <string name="tv_walking_time">徒歩　:　</string>
    <string name="tv_time_dif">バス　:　</string>
    <string name="bt_map">マップを見る</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
